Bug 487216 - Dynamic word wrap doesn't stay active
Summary: Dynamic word wrap doesn't stay active
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 445598 486991 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-05-19 03:43 UTC by Zu Zuang
Modified: 2024-06-17 20:43 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Zu Zuang 2024-05-19 03:43:02 UTC
SUMMARY

Hello. The problem is stated: Dynamic word wrap does not stay active.

STEPS TO REPRODUCE
1. Open the kate
2. Activate dynamic word wrap
3. Close the kate
4. Open the kate
5. Word wrap not active

It do not happen all the time. Often, it do.

OBSERVED RESULT

No word wrap

EXPECTED RESULT

Yes word wrap

SOFTWARE/OS VERSIONS

Linux/KDE Plasma: Arch Linux
(available in About System)
KDE Plasma Version: The latest
KDE Frameworks Version: The latest
Qt Version: The latest

ADDITIONAL INFORMATION

Hope it work soon.
Comment 1 Christoph Cullmann 2024-05-25 15:55:46 UTC
Git commit 01df44334538fb0dd0a53e4618b89701fef226d5 by Christoph Cullmann.
Committed on 25/05/2024 at 15:55.
Pushed by cullmann into branch 'master'.

ensure we not reset the dynamic word wrap state

M  +5    -1    src/view/kateview.cpp

https://invent.kde.org/frameworks/ktexteditor/-/commit/01df44334538fb0dd0a53e4618b89701fef226d5
Comment 2 Christoph Cullmann 2024-05-25 15:57:37 UTC
*** Bug 486991 has been marked as a duplicate of this bug. ***
Comment 3 ratijas 2024-06-01 07:51:01 UTC
Hi, I'm on master branch of everything. The problem still persists.

Open Kate
New File
Dynamic Word Wrap is enabled
Disable Dynamic Word Wrap
Close Kate
Open Kate again
New File
Dynamic Word Wrap is enabled ???

However, the setting seems to persist on "real files", not for scratch buffers. Why?
Comment 4 Chris 2024-06-10 07:15:19 UTC
Yes, I was just about to report this bug.
(this is an automatic translation into English!)

The automatic line break is set in:
Settings -> Setup -> Appearance -> Automatic line break
and
View -> Line break -> Automatic line break

I'm working on a file and suddenly I notice that a horizontal bar appears at the bottom and the line I'm writing on is getting longer and longer. Automatic line break no longer occurs.

I haven't yet figured out whether it happens immediately when I open the file or at some point in the middle of working.

Under Settings -> Setup -> Appearance -> Automatic line break
the checkbox is still checked.
But under View -> Line break -> Automatic line break
it is missing and needs to be reset.

If I do that, reset the checkbox, it lasts for a while.
Maybe until I reopen the file next time, or maybe it lasts 10x closing and opening.
It seems to randomly reoccur.

By the way: Why are there two setting options (locations) for the same thing?
Isn't that contradictory?
Comment 5 Christoph Cullmann 2024-06-12 19:14:57 UTC
Should be fixed with Frameworks 6.3.(In reply to ratijas from comment #3)
> Hi, I'm on master branch of everything. The problem still persists.
> 
> Open Kate
> New File
> Dynamic Word Wrap is enabled
> Disable Dynamic Word Wrap
> Close Kate
> Open Kate again
> New File
> Dynamic Word Wrap is enabled ???
> 
> However, the setting seems to persist on "real files", not for scratch
> buffers. Why?

That is expected, that setting is per view, to alter the general setting one must go to the config dialog.
Comment 6 Christoph Cullmann 2024-06-12 19:16:10 UTC
The issue that we loose the setting is fixed, with Frameworks 6.3. That the setting in the view menu is not persistent for the app is per design, the settings dialog has the global option for that.
Comment 7 Christoph Cullmann 2024-06-17 20:43:32 UTC
*** Bug 445598 has been marked as a duplicate of this bug. ***