ensure we not reset the dynamic word wrap state

BUG: 487216